# norwegian-shadowing-app

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
docs/: alignment-backends.md  (+9 more)
tools/pipeline/: README.md  pyproject.toml
tools/pipeline/src/shadowing_pipeline/: __init__.py  annotated_repair.py  audio_convert.py  builder.py  cli.py  errors.py  ingest.py  init_lesson.py  language_config.py  manifest.py  models.py  parse_annotations.py  sentence_split.py  summaries.py  sync_public.py  text_utils.py
tools/pipeline/src/shadowing_pipeline/align/: __init__.py  asr_mapping.py  base.py  external_file.py  fallback.py  mfa_adapter.py  real_cli.py  selector.py  whisperx_adapter.py
tools/pipeline/src/shadowing_pipeline/exporters/: __init__.py  lesson_json.py  vtt.py
tools/pipeline/src/shadowing_pipeline/pipeline/: __init__.py  context.py  stage_align_audio.py  stage_export.py  stage_load.py  stage_manifest.py  stage_normalize_audio.py  stage_regenerate_annotated.py  stage_segment_sentences.py  stage_validate.py
tools/pipeline/src/shadowing_pipeline/segmentation/: __init__.py  spacy_sentences.py
tools/pipeline/tests/: test_alignment_selector.py  test_annotated_repair.py  test_asr_mapping.py  test_build_summaries.py  test_external_alignment.py  test_fallback_alignment.py  test_ingest.py  test_init_lesson.py  test_language_config.py  test_lesson_json_exporter.py  test_manifest.py  test_parse_annotations.py  test_pipeline_export_shape.py  test_sentence_split.py  test_shell_scripts.py  test_stage_segmentation.py  test_summaries.py  test_vtt_exporter.py
(+44 files in other folders)
