[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shadowing-pipeline"
version = "0.1.0"
description = "Lesson ingestion and preprocessing pipeline for the Norwegian Shadowing app"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]
segmentation = [
    "spacy>=3.7",
]

[project.scripts]
shadowing-pipeline = "shadowing_pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shadowing_pipeline"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
